--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8080
 spring.thymeleaf.prefix=file:/app/templates/
 spring.thymeleaf.cache=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+openai.api.key=KEY_HERE
+implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
