Adicionando Dev tools

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8080
-spring.thymeleaf.prefix=file:/app/templates/
 spring.thymeleaf.cache=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -12,5 +11,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-openai.api.key=KEY_HERE
+openai.api.key=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
 implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+spring.thymeleaf.prefix=file:/app/src/main/resources/templates/
+spring.devtools.restart.enabled=true
