--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8081
-spring.thymeleaf.prefix=file:/app/templates/
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:/app/src/main/resources/templates/
+spring.devtools.restart.enabled=true
