Adicionando Config e Eureka Servers

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -15,3 +15,4 @@ openai.api.key=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
 implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 spring.thymeleaf.prefix=file:/app/src/main/resources/templates/
 spring.devtools.restart.enabled=true
+spring.cloud.config.profile=dev
