--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3.4'
 
 services:
+  config-server:
+    image: maven:3.8.4-openjdk-17-slim
+    restart: always
+    environment:
+      TZ: America/Sao_Paulo
+    ports:
+      - 8084
+    working_dir: /server
+    command: sh -c "cd /server && mvn clean && mvn spring-boot:run"
+    user: root
+    volumes:
+      - ./config-server:/server
   user-services:
     image: maven:3.8.4-openjdk-17-slim
     restart: always
@@ -9,7 +21,21 @@ services:
     volumes:
       - ./user-service:/app
     working_dir: /app
-    command: sh -c "cd /app && mvn spring-boot:run"
+    command: sh -c "cd /server && mvn clean && mvn spring-boot:run"
+  discovery-server:
+    image: maven:3.8.4-openjdk-17-slim
+    restart: always
+    environment:
+      TZ: America/Sao_Paulo
+    ports:
+      - 8761:8761
+    working_dir: /server
+    command: sh -c "cd /server && mvn clean && mvn spring-boot:run"
+    user: root
+    volumes:
+      - ./discovery-server:/server
+    depends_on:
+      - config-server
   product-service:
     image: maven:3.8.4-openjdk-17-slim
     restart: always
@@ -18,5 +44,5 @@ services:
     volumes:
       - ./product-service:/app
     working_dir: /app
-    command: sh -c "cd /app && mvn spring-boot:run"
+    command: sh -c "cd /server && mvn clean && mvn spring-boot:run"
 
