--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -9,6 +9,10 @@
     <version>2.6.0</version>
     <relativePath/> 
   </parent>
+    <properties>
+    <java.version>17</java.version>
+    <spring-cloud.version>2021.0.7</spring-cloud.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -45,7 +49,23 @@
         <scope>runtime</scope>
         <optional>true</optional>
     </dependency>
+    	<dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+		
   </dependencies>
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>2020.0.3</version> 
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
   <build>
     <plugins>
       <plugin>
