--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,15 @@ services:
     environment:
       TZ: America/Sao_Paulo
     ports:
-      - 8084
+      - 8889:8889
     working_dir: /server
     command: sh -c "cd /server && mvn clean && mvn spring-boot:run"
     user: root
     volumes:
       - ./config-server:/server
-  user-services:
-    image: maven:3.8.4-openjdk-17-slim
-    restart: always
-    ports:
-      - 8081:8081
-    volumes:
-      - ./user-service:/app
-    working_dir: /app
-    command: sh -c "cd /server && mvn clean && mvn spring-boot:run"
+    networks:
+      - UN-network
+
   discovery-server:
     image: maven:3.8.4-openjdk-17-slim
     restart: always
@@ -36,6 +30,19 @@ services:
       - ./discovery-server:/server
     depends_on:
       - config-server
+    networks:
+      - UN-network
+  # user-services:
+  #   image: maven:3.8.4-openjdk-17-slim
+  #   restart: always
+  #   ports:
+  #     - 8081:8081
+  #   volumes:
+  #     - ./user-service:/app
+  #   working_dir: /app
+  #   command: sh -c "cd /app && mvn clean && mvn spring-boot:run"
+  #   networks:
+  #     - UN-network
   product-service:
     image: maven:3.8.4-openjdk-17-slim
     restart: always
@@ -44,5 +51,10 @@ services:
     volumes:
       - ./product-service:/app
     working_dir: /app
-    command: sh -c "cd /server && mvn clean && mvn spring-boot:run"
+    command: sh -c "cd /app && mvn clean && mvn spring-boot:run"
+    networks:
+      - UN-network
 
+networks:
+  UN-network:
+    driver: bridge
