--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.7.12</version>
     <relativePath/>
-    <!-- lookup parent from repository -->
+
   </parent>
   <groupId>br.com.geek.theories</groupId>
   <artifactId>config-server</artifactId>
@@ -27,7 +27,10 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-config-server</artifactId>
     </dependency>
-
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
