--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -11,8 +11,11 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-openai.api.key=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
+openai.api.key=keyhere
 implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 spring.thymeleaf.prefix=file:/app/src/main/resources/templates/
 spring.devtools.restart.enabled=true
 spring.cloud.config.profile=dev
+spring.cloud.config.enabled=false
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
+spring.application.name=product-service
